Полная версия с испровление всех ошибок и лицензией

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Copyright (c) 2024 Данил Гаргун (Daniil Gargun)
+# Telegram: @Daniilgargun (https://t.me/Daniilgargun)
+# Email: daniilgorgun38@gmail.com
+# Телефон: +375299545338
+# Все права защищены. Использование без разрешения запрещено.
+
 # Виртуальные окружения
 .env
 .venv/
